<resources>
    <string name="app_name">Dreambox</string>
    <string name="title_activity_dream">DreamActivity</string>

    <string name="create_dream">Criar Sonho</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">Cadastrar</string>
    <string name="welcome_text">Bem-vindo! Faça o cadastro para começar</string>
    <string name="name">Nome</string>
    <string name="surname">Sobrenome</string>
    <string name="email">Email</string>
    <string name="sign_up">cadastrar</string>

    <string name="create_dream_text">Crie seu sonho aqui!</string>
    <string name="description">Descrição</string>
    <string name="title">Titulo</string>

    <string name="title_activity_home">Home</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="name_field">Nome</string>
    <string name="nickname_field">Apelido (será seu login no Dreambox)</string>
    <string name="password_field">Senha</string>
    <string name="dreamer_button">Torne-se um sonhador !!</string>
    <string name="edit_dreamer_button">Alterar dados</string>
    <string name="organization_field">Sua organização</string>
    <string name="title_activity_dream_detail">DreamDetail</string>
    <string name="email_field">Seu Email</string>
    <string name="got_it">OK, ENTENDI</string>
    <string name="clouds_instruction">Toque em qualquer nuvem para ver um sonho</string>
    <string name="robot_instruction">Toque no robô para ver o menu</string>
    <string name="dreamer_name">Sonhador</string>
    <string name="dream_title">Titulo sonho</string>
    <string name="description_detail">Só uma pequena descrição lalalalalalaasldjasd asdjsaldjaslkdj laskdjsakl jaskldj asldkj salk js</string>
    <string name="last_name_field">Sobrenome</string>
    <string name="title_dreamer">Cadastrado de sonhador</string>
    <string name="alter_dreamer_title">Alterar informações</string>
    <string name="dreams">Sonhos</string>
    <string name="home">Home</string>
    <string name="fulfilled_dreams">Sonhos realizados</string>
    <string name="sign_in">Logar</string>
    <string name="new_dream">Novo sonho</string>
    <string name="dream_search">Busque um sonho</string>

    <string name="dreamer_updated">Sonhador atualizado!</string>
    <string name="dreamer_not_updated">Sonhador não atualizado!</string>
</resources>
