<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_item"
            android:checked="true"
            android:icon="@drawable/ic_home_white_36dp"
            android:title="@string/home" />
        <item
            android:id="@+id/fulfilled_dreams_item"
            android:icon="@drawable/ic_cloud_done_white_36dp"
            android:title="@string/fulfilled_dreams" />
        <item
            android:id="@+id/new_dream_item"
            android:icon="@drawable/ic_cloud_upload_white_36dp"
            android:title="@string/new_dream" />
    </group>
    <group
        android:id="@+id/navigation_pinned"
        android:checkableBehavior="single">
        <item android:title="">
            <menu>
                <item
                    android:id="@+id/auth_menu_item"
                    android:icon="@drawable/ic_account_circle_white_36dp"
                    android:title="@string/sign_in" />
            </menu>
        </item>
    </group>
</menu>