<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.dreambox.activity.DreamerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/dreamer_name"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_activity_margin"
            android:hint="@string/name_field" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/dreamer_last_name"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="@dimen/default_activity_margin"
            android:hint="@string/last_name_field" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/dreamer_birthday"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_activity_margin"
            android:hint="Nascimento" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/dreamer_organization"
            android:paddingTop="@dimen/edit_margin"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="@dimen/default_activity_margin"
            android:hint="@string/organization_field" />

    </LinearLayout>


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/dreamer_nickname"
        android:paddingTop="@dimen/edit_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_activity_margin"
        android:hint="@string/nickname_field" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/dreamer_email"
        android:paddingTop="@dimen/edit_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_activity_margin"
        android:hint="@string/email_field" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/dreamer_password"
        android:paddingTop="@dimen/edit_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_activity_margin"
        android:inputType="textPassword"
        android:hint="@string/password_field" />



    <Button
        android:layout_marginTop="@dimen/edit_margin"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dreamer_button"
        android:id="@+id/button_create_dreamer"/>

</LinearLayout>
