<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.dreambox.activity.EditProfileActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_dreamer"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/name_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:orientation="horizontal">


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/dreamer_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_activity_margin"
            android:layout_weight="1"
            android:hint="@string/name_field" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/dreamer_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_activity_margin"
            android:layout_weight="1"
            android:hint="@string/last_name_field" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/birthday_organization_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_area"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/dreamer_birthday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_activity_margin"
            android:layout_weight="1"
            android:hint="Nascimento" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/dreamer_organization"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_activity_margin"
            android:layout_weight="1"
            android:hint="@string/organization_field"
            android:paddingTop="@dimen/edit_margin" />

    </LinearLayout>


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/dreamer_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/birthday_organization_area"
        android:layout_marginTop="@dimen/default_activity_margin"
        android:hint="@string/nickname_field"
        android:paddingTop="@dimen/edit_margin" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/dreamer_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dreamer_nickname"
        android:layout_marginTop="@dimen/default_activity_margin"
        android:hint="@string/email_field"
        android:paddingTop="@dimen/edit_margin" />

    <Button
        android:id="@+id/button_edit_dreamer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/edit_margin"
        android:background="@color/colorPrimary"
        android:text="@string/edit_dreamer_button" />

</RelativeLayout>